version 2.1-rc2 - XX-May-2013
. [FIX] DrawingPrimitives: DrawSolidCircle calls lazy_init()
. [FIX] Layer: "swallow" is now a property. Can be changed in runtime.
. [FIX] MenuItem: target is not retained when using setTarget:selector: (issue #1482)
. [FIX] Progress Actions: "updateProgress" is called after setting the type
. [FIX] TileMaps: tile's offset property is used

version 2.1-rc1 - 20-Mar-2013
. [NEW] DrawingPrimitives: Added DrawSolidCircle, DrawArc, DrawSolidArc (issue #1465)
. [NEW] GLProgram: Added 2 class methods to create the instance
. [NEW] MenuItem: rect -> renamed activeArea. If contentSize is modified, activeArea is modified too
. [FIX] ClippingNode: Uses glClear to clear the stencil buffer (issue #1463)
. [FIX] Director: Only create the statsLabels if view is not nil
. [FIX] EaseActions: fixed rounding error in BounceXXX and ExpXXX actions
. [FIX] GLProgram: If shader files are not found at init time, returns nil and log warning on console
. [FIX] RenderTexture: returns correct value of contentSize
			Internal sprite sets opacityModifyRGB=YES (issue #1464)
. [FIX] Texture2D: Logs using RGB565 textures only if RGB565 is being used
			Fixed deprecation warnings on iOS6 (issue #1467)
. [PERF] Uniforms: small performance improvement when setting uniforms
. [3RD] CCBReader: new version of CCBReader (which version is it???)
. [3RD] Chipmunk: Updated to 6.1.4
. [3RD] JS Bindings: Updated to v0.6
. [3RD] SpiderMonkey: Updated to v19.0

version 2.1-rc0a  07-Feb-2013
. [NEW] Actions: Stackable actions behavior can be disabled at compile time (issue #1461)
		BezierTo copy: works as expected
. [FIX] LabelBMFont: setting color of label and individual chars works as expected
. [FIX] RGBAProtocol: color and opacity are propagated if parent has cascade property enabled
		renamed methods: cascadeColor -> cascadeColorEnabled, cascadeOpacity -> cascadeOpacityEnabled
. [FIX] Sprite: color code improved. Removed 'unmodifiedColor' ivar.